// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: AwardBase
message AwardBase
{	
	
	
	repeated AwardDefine Award = 1; // Award

}

// Defined in table: Award
message AwardDefine
{	
	
	
	optional int32 Id = 1; // 奖品id
	
	
	optional int32 Type = 2; // 奖品类型
	
	
	repeated int32 CostType = 3; // 消耗道具类型
	
	
	repeated int32 CostId = 4; // 消耗道具id
	
	
	repeated int32 CostNum = 5; // 消耗道具数量
	
	
	repeated int32 RewardType = 6; // 奖励道具类型
	
	
	repeated int32 RewardId = 7; // 奖励道具id
	
	
	repeated int32 RewardNum = 8; // 奖励道具数量
	
	
	optional int32 PreId = 9; 
	
	
	optional int32 LogId = 10; 
	
	
	optional string Name = 11; // 名字
	
	
	optional string Des = 12; // 描述
	
	
	optional int32 Limit = 13; // 使用次数限制
	
	
	optional int32 Nacr = 14; // 不能通过兑换协议直接兑换
	
	
	optional int32 MailId = 15; // 邮件id

}

