// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TSystemTime
message TSystemTime
{	
	
	
	repeated SystemTimeDefine SystemTime = 1; // SystemTime

}

// Defined in table: SystemTime
message SystemTimeDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional int32 TimeId = 2; 
	
	
	optional int32 SubId = 3; 
	
	
	repeated int32 Start = 4; 
	
	
	repeated int32 End = 5; 

}

