syntax = "proto2";
package msg;
import "serialize.proto";
import "define.proto";


// --------------------------------------------------------------------------
/// @brief Client <----> LoginServer
// --------------------------------------------------------------------------
// 账号密码登陆
message C2L_ReqLogin {
    optional string account = 1;
    optional string passwd  = 2;
}

// 微信小游戏登陆
message C2L_ReqLoginWechat {
    optional string openid = 1;
    optional string head = 2;
    optional string nickname = 3;
    optional string invitationcode = 4;
}


// 返回登陆验证结果
message L2C_RetLogin {
    optional int32  result = 1;     // 0失败，1成功
    optional string reason = 2;     // 失败原因
    optional msg.IpHost gatehost = 3;
    optional string verifykey = 5;  // 客户端使用这个key登陆网关
}

// 注册账户--第一步 请求验证码
message C2L_ReqRegistAuthCode {
    optional string phone = 1;
}


// 注册账户--第二步
message C2L_ReqRegistAccount {
    optional string phone = 1;
    optional string passwd = 2;
    optional string authcode = 3;
    optional string invitationcode = 4;
    optional string nickname = 5;
}


// 注册返回
message L2C_RetRegistAccount {
    optional string errcode = 1;
}


// --------------------------------------------------------------------------
/// @brief Client <----> GateServer
// --------------------------------------------------------------------------
// 客户端请求登陆网关
message C2GW_ReqLogin
{
    optional string account = 1;        // 玩家account
    optional string verifykey = 2;      // login生成的校验key，验证玩家合法性
    optional string token = 3;          // 
    optional string head = 4;           // 
}


// 结果
message GW2C_RetLogin
{
    //optional string account = 1;
    optional string errcode = 1;
}

// 发送玩家个人数据
message GW2C_SendUserInfo {
    optional msg.EntityBase entity  = 1;
    optional msg.UserBase   base    = 2;
    optional msg.ItemBin    item    = 3;
}

message GW2C_SendUserPlatformMoney {
    optional int32 coins = 1;
}

// 心跳
message C2GW_HeartBeat {
    optional int64 uid  = 1;
    optional int64 time = 2;
    repeated string test = 3;
    //optional string token = 4;
}

message GW2C_HeartBeat {
    optional int64 uid  = 1;
    optional int64 time = 2;
    repeated string test = 3;
}


